--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,23 @@
 <!-- footer -->
 <footer class="footer">
 	<div class="inner-wrap">
-		333333
+		<div class="box-inner-wrap">
+			<div class="copy-wrap">2023. Все права защищены</div>
+			<div class="soc-wrap">
+				<a href="" class="btn-soc">
+					<span class="button-ico">
+						<img src="./img/icons/tg.svg" alt="">
+					</span>
+					<span class="button-title">Напишите нам в&nbsp;Telegram</span>
+				</a>
+			</div>
+			<div class="studio-wrap">
+				Проект работает на <a href="" class="link-main">системе&nbsp;Viju</a>
+				<div class="logo">
+					<img src="./img/logo-footer.svg" alt="">
+				</div>
+			</div>
+		</div>
 	</div>
 </footer>
 <!-- /footer -->
