--- a/css/less/items.less
+++ b/css/less/items.less
@@ -1,44 +1,155 @@
 /* ----------------------------------- *\
 			items styles
 \* ----------------------------------- */
-.item-photo {
+.item-tile-logo {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    height: 14rem;
+    img, svg {
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        max-width: 100%;
+        max-height: 100%;
+        margin: auto;
+    }
+}
+.item-tile-main {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-height: 350px;
+    height: 100%;
+    border-radius: var(--bradius);
+    overflow: hidden;
+    font-size: 14px;
+    line-height: (22/14);
+    color: var(--clr-light);
+    padding-top: 40px;
+    transform: translateZ(0);
+    &:hover {
+        .btn-action-ico.ico-play-border {
+            background-color: #FF006A;
+            border-color: #FF006A;
+            &:before {
+                filter: brightness(0) invert(1);
+            }
+        }
+    }
+    .tile-info-wrap {
+        display: block;
+        width: 100%;
+        flex-shrink: 0;
+        min-height: 140px;
+        border-radius: var(--bradius) var(--bradius) 0 0;
+        background-color: #fff;
+        position: relative;
+        overflow: hidden;
+        padding: 30px 120px 30px 30px;
+    }
+    .tile-title {
+        display: block;
+        font-size: (22/14em);
+        line-height: (30/22);
+        font-weight: 600;
+        color: var(--clr-base);
+        margin: 0 0 6px 0;
+    }
+    .tile-title-light {
+        display: inline;
+        font-weight: 300;
+    }
+    .btn-action-ico {
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        margin-top: -30px;
+        z-index: 6;
+    }
+    .tile-link {
+        z-index: 5;
+    }
+    a {
+        display: block;
+        color: inherit;
+        &:hover {
+            color: var(--clr-att);
+        }
+    }
+}
+.elm-photo, .tile-photo {
     display: block;
     position: relative;
     overflow: hidden;
     text-decoration: none;
     line-height: 1;
+    transform: translateZ(0);
+    &.photo-main {
+        border: 1px solid #f00;
+        width: 300px;
+        height: 300px;
+    }
     &:before {
         content: "";
-        display: block;
+        display: none;
         padding-top: 100%;
     }
     img {
         display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
+        position: relative;
         width: 100%;
     }
-    &.photo-full {
+    &.photo-cover {
         &:before {
-            display: none;
+            display: block;
         }
         img {
-            position: relative;
-            top: auto;
-            bottom: auto;
-            left: auto;
-            right: auto;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &.photo-contain {
+        &:before {
+            display: block;
+        }
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
         }
     }
 }
-.elm-ico, .button-ico, .menu-ico, .frm-ico {
+.elm-price, .tile-price {
+    white-space: nowrap;
+    &.price-old {
+        text-decoration: line-through;
+    }
+}
+.elm-ico, .button-ico, .menu-ico, .frm-ico, .tab-ico, .tile-ico {
     display: block;
     position: relative;
     overflow: hidden;
     width: 40px;
     height: 40px;
-    img, .i, svg {
+    img, [class*="icon-"], .i, svg {
         display: block;
         position: absolute;
         top: 0;
@@ -48,5 +159,62 @@
         margin: auto;
         max-width: 100%;
         max-height: 100%;
+    }
+}
+.elm-overlay {
+    display: none;
+    animation: fadein ease 0.2s;
+    background: fade(#000, 80);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 120;
+    &.active {
+        display: block;
+    }
+}
+@media (max-width: 1023px) {
+    .item-tile-main {
+        .tile-info-wrap {
+            padding: 20px 80px 20px 20px;
+        }
+        .btn-action-ico {
+            width: 40px;
+            height: 40px;
+            right: 20px;
+            margin-top: -20px;
+        }
+        .tile-title {
+            font-size: 18px;
+        }
+    }
+}
+@media (max-width: 479px) {
+    .item-tile-main {
+        padding-top: 80px;
+        &:hover {
+            .btn-action-ico {
+                &.ico-play-border {
+                    background-color: var(--clr-att) !important;
+                }
+            }
+        }
+        .tile-info-wrap {
+            padding-right: 20px;
+            overflow: visible;
+        }
+        .btn-action-ico {
+            bottom: 100%;
+            margin-bottom: 20px;
+            margin-top: 0;
+            top: auto;
+            &.ico-play-border {
+                &:not(:hover) {
+                    background-color: #000;
+                }
+            }
+        }
     }
 }
