--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -6,21 +6,22 @@ html, body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	min-width: var(--min, 320px);
+	min-width: var(--min);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 body {
-    //min-height: -webkit-fill-available;
+    width: 100vw;
+    overflow-x: hidden;
 }
-html {
-    //height: -webkit-fill-available;
-}
-.inner-wrap, .page {
+.inner-wrap, .page-full {
 	position: relative;
 	clear: both;
 	margin: 0 auto;
-	padding: 0 20px;
-	min-width: var(--min, 320px);
-	max-width: var(--max, 1200px);
+    padding-left: var(--paddingContainer);
+    padding-right: var(--paddingContainer);
+	min-width: var(--min);
+	max-width: var(--max);
 	width: 100%;
 	.inner-wrap {
 		min-width: 0;
@@ -31,7 +32,7 @@ html {
 		min-width: 0;
 	}
 }
-.page {
+.page-full {
 	flex: 1 0 auto;
 }
 .wrap, .footer {
@@ -44,7 +45,7 @@ html {
 .cnt-section {
 	position: relative;
 	clear: both;
-	min-width: var(--min, 320px);
+	min-width: var(--min);
 	width: 100%;
 }
 .wrap {
@@ -75,6 +76,59 @@ html {
 		transition: all ease 0.2s;
 	}
 }
+.footer {
+    border-top: 1px solid var(--clr-border);
+    font-size: 14px;
+    line-height: (22/14);
+    color: #585858;
+    .box-inner-wrap {
+        max-width: 1400px;
+        display: flex;
+        align-items: center;
+        min-height: 120px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin: 0 auto;
+    }
+    .copy-wrap {
+        flex-shrink: 0;
+        padding: 0 5.5rem 0 0;
+    }
+    .soc-wrap {
+        flex: 1;
+    }
+    .studio-wrap {
+        flex-shrink: 0;
+        padding-left: 3rem;
+    }
+    a:not(.link-main) {
+        color: inherit;
+        &:hover {
+            color: var(--clr-att);
+        }
+    }
+    .btn-soc {
+        display: inline-flex;
+        vertical-align: middle;
+        position: relative;
+        align-items: center;
+        .button-ico {
+            width: 30px;
+            height: 30px;
+            flex-shrink: 0;
+        }
+        .button-title {
+            display: block;
+            padding-left: 12px;
+        }
+    }
+    .logo {
+        width: 70px;
+        display: inline-block;
+        vertical-align: middle;
+        margin-left: 6px;
+    }
+}
 .logo {
     display: block;
     position: relative;
@@ -90,5 +144,31 @@ html {
     img {
         display: block;
         width: 100%;
+    }
+}
+@media (max-width: 767px) {
+    .footer {
+        .box-inner-wrap {
+            text-align: center;
+            display: block;
+        }
+        .copy-wrap {
+            padding: 0;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        .soc-wrap {
+            padding: 0;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        .studio-wrap {
+            width: 100%;
+            padding: 0;
+        }
+        .logo {
+            display: block;
+            margin: 10px auto 0 auto;
+        }
     }
 }
