--- a/css/less/content.less
+++ b/css/less/content.less
@@ -8,7 +8,7 @@
         background-color: var(--clr-bg);
         border: 1px solid var(--clr-border);
         padding: 4.6rem 8rem 5.4rem 12.8rem;
-        max-width: 1400px;
+        max-width: 1210px;
         display: flex;
         justify-content: space-between;
         margin: 0 auto;
@@ -51,7 +51,7 @@
 .main-partners-box {
     margin-bottom: 7rem;
     .box-inner-wrap {
-        max-width: 1400px;
+        max-width: 1210px;
         margin: 0 auto;
     }
     .slider-wrap {
@@ -84,7 +84,7 @@
         padding: 7rem 4rem 0 4rem;
     }
     .box-outer-wrap {
-        max-width: 1230px;
+        max-width: 1130px;
         margin: 0 auto;
         display: flex;
         align-items: flex-end;
@@ -141,7 +141,7 @@
         width: 50%;
     }
     .items-inner-wrap {
-        max-width: 1230px;
+        max-width: 1130px;
         margin: 0 auto;
     }
     .more-wrap {
@@ -200,9 +200,14 @@
         align-items: center;
         min-height: 35rem;
         .elm-photo {
+        }
+        .slider-wrap {
             width: 35rem;
             flex-shrink: 0;
             border-radius: var(--bradius);
+            position: relative;
+            overflow: hidden;
+            transform: translateZ(0);
             height: 100%;
         }
         .info-text-wrap {
@@ -223,7 +228,7 @@
     padding: 7.4rem 0 5.5rem 0;
     text-align: center;
     .box-inner-wrap {
-        max-width: 1400px;
+        max-width: 1210px;
         margin: 0 auto;
     }
     .elm-photo {
@@ -276,7 +281,7 @@
     }
     .main-info-box {
         .info-wrap {
-            .elm-photo {
+            .slider-wrap {
                 width: 28rem;
             }
             .info-text-wrap {
@@ -333,7 +338,7 @@
         }
         .info-wrap {
             display: block;
-            .elm-photo {
+            .slider-wrap {
                 margin-bottom: 30px;
                 max-width: 100%;
                 width: 45rem;
@@ -394,7 +399,7 @@
             padding: 3rem;
         }
         .info-wrap {
-            .elm-photo {
+            .slider-wrap {
                 margin-left: auto;
                 margin-right: auto;
             }
