--- a/css/less/main.less
+++ b/css/less/main.less
@@ -8,11 +8,11 @@
     --bradius: 2rem;
 
 	--min: 320px;
-	--max: 1920px;
+	--max: 1700px;
     
     --paddingContainer: 15px;
 
-	font-size: 10px;
+	font-size: 9px;
 }
 .sl-wrap~.sl-wrap {
 	display: none;
@@ -26,7 +26,7 @@
 body {
 	color: var(--clr-base);
 	background: #fff;
-    font-size: 18px;
+    font-size: 16px;
     line-height: (24/18);
 }
 p, ul, ol, table, blockquote, .bq-text {
@@ -53,7 +53,7 @@ ol {
         min-height: (40/18em);
         display: flex;
         align-items: center;
-        &:hover {
+        &:hover, &.active {
             &:before {
                 background-color: var(--clr-att);
             }
