--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -162,16 +162,36 @@ body {
         background-color: #fff;
         box-shadow: 0px 40px 100px rgba(0, 0, 0, 0.25);
         padding: 4rem;
+        overflow: hidden;
+    }
+    #swipebox-slider .slide .swipebox-video-container .swipebox-video {
+        padding-top: 0;
+        padding-bottom: 0;
+        width: 100%;
+        height: auto;
+        max-height: calc(100vh - 8rem);
+        overflow: hidden;
+        &:before {
+            content: "";
+            display: block;
+            padding-top: 56%;
+        }
     }
     #swipebox-top-bar {
         top: 0;
         transform: none !important;
+    }
+    #swipebox-slider .slide .swipebox-video-container {
+        //max-height: 80%;
     }
 }
 @media (max-width: 767px) {
     body {
         #swipebox-slider .slide .swipebox-video-container {
             padding: 15px;
+        }
+        #swipebox-slider .slide .swipebox-video-container .swipebox-video {
+            max-height: (100vh - 30px);
         }
     }
 }
