--- a/css/style.css
+++ b/css/style.css
@@ -1331,6 +1331,20 @@ body #swipebox-slider .slide .swipebox-video-container {
   box-shadow: 0px 40px 100px rgba(0, 0, 0, 0.25);
   padding: 36px;
   padding: 4rem;
+  overflow: hidden;
+}
+body #swipebox-slider .slide .swipebox-video-container .swipebox-video {
+  padding-top: 0;
+  padding-bottom: 0;
+  width: 100%;
+  height: auto;
+  max-height: calc(100vh - 8rem);
+  overflow: hidden;
+}
+body #swipebox-slider .slide .swipebox-video-container .swipebox-video:before {
+  content: "";
+  display: block;
+  padding-top: 56%;
 }
 body #swipebox-top-bar {
   top: 0;
@@ -1339,6 +1353,9 @@ body #swipebox-top-bar {
 @media (max-width: 767px) {
   body #swipebox-slider .slide .swipebox-video-container {
     padding: 15px;
+  }
+  body #swipebox-slider .slide .swipebox-video-container .swipebox-video {
+    max-height: 70vh;
   }
 }
 /* ----------------------------------- *\
