--- a/css/less/items.less
+++ b/css/less/items.less
@@ -6,6 +6,10 @@
     position: relative;
     overflow: hidden;
     height: 14rem;
+    transition: all ease 0.2s;
+    &:hover {
+        opacity: 0.5;
+    }
     img, svg {
         display: block;
         position: absolute;
