--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -184,6 +184,9 @@ body {
     #swipebox-slider .slide .swipebox-video-container {
         //max-height: 80%;
     }
+    #swipebox-bottom-bar, #swipebox-top-bar {
+        background-color: transparent;
+    }
 }
 @media (max-width: 767px) {
     body {
